# hag-soda-stream

./: .gitignore  Dockerfile.dummy  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: alerts.yaml  bump_soda_image.yaml  deploy-dev.yaml  deploy-prod.yaml  deploy.yaml  deploy_dev_run_once.yaml
.nais/: dev-run-once.yaml
local/: .gitignore  Makefile  pyproject.toml  soda-scan.py
local/soda-checks/: arkivering_oppgave_datastream.yaml  flex_dataset.yaml  flex_sykmeldinger_backend_datastream.yaml  flexjar_datastream.yaml  inntektsmelding_status_datastream.yml  lps_api_dataset.yaml  modia_kontakt_metrikk_datastream.yaml  sak_status_metrikk_datastream.yaml  soda_dataset.yaml  spinnsyn_arkivering_datastream.yaml  spinnsyn_datastream.yaml  sykepengesoknad_datastream.yaml
local/soda-config/: config.yaml
nais/: alerts.yaml  dev-run-once.yaml  dev.yaml  naisjob.yaml  prod-run-once.yaml  prod.yaml  soda-checks-dev.yaml  soda-checks-prod.yaml  soda-checks.yaml  soda-config-dev.yaml  soda-config-prod.yaml  soda-config.yaml
