[tool.poetry]
name = "soda-checks"
version = "0.1.0"
description = ""
authors = ["Nils Jørgen Mittet <nils.jorgen.mittet@nav.no>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
soda-core-bigquery = "^3.4.4"
google-cloud-bigquery-storage = "^2.28.0"
pyarrow = "^19.0.1"
setuptools = "^75.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
