[tool.poetry]
name = "soda-checks"
version = "0.1.0"
description = ""
authors = ["Nils Jørgen Mittet <nils.jorgen.mittet@nav.no>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
soda-core-bigquery = "^3.5.6"
google-cloud-bigquery-storage = "^2.29.1"
pyarrow = "^23.0.0"
setuptools = "^80.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
